--- a/judo-runtime-core-security/pom.xml
+++ b/judo-runtime-core-security/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>judo-runtime-core-security</artifactId>
     <packaging>bundle</packaging>
 
-    <name>JUDO Services Security</name>
+    <name>JUDO Runtime Core :: Security</name>
 
     <build>
         <plugins>
