--- a/judo-runtime-core-dao-core/pom.xml
+++ b/judo-runtime-core-dao-core/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>judo-runtime-core-dao-core</artifactId>
     <packaging>bundle</packaging>
 
-    <name>JUDO Services Core Data Access Objects</name>
+    <name>JUDO Runtime Core :: Core Data Access Objects</name>
 
     <build>
         <plugins>
