--- a/judo-runtime-core-persistence-hsqldb/pom.xml
+++ b/judo-runtime-core-persistence-hsqldb/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>judo-runtime-core-persistence-hsqldb</artifactId>
     <packaging>bundle</packaging>
 
-    <name>JUDO Services Persistence HSQLDB</name>
+    <name>JUDO Runtime Core :: Persistence HSQLDB</name>
 
     <build>
         <plugins>
