--- a/judo-runtime-core-query/pom.xml
+++ b/judo-runtime-core-query/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>judo-runtime-core-query</artifactId>
     <packaging>bundle</packaging>
 
-    <name>JUDO Services Query</name>
+    <name>JUDO Runtime Core :: Query</name>
 
     <build>
         <plugins>
