--- a/judo-runtime-core-dao-rdbms/pom.xml
+++ b/judo-runtime-core-dao-rdbms/pom.xml
@@ -134,12 +134,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jool-java-8</artifactId>
             <version>0.9.13</version>
@@ -272,6 +266,11 @@
             <groupId>hu.blackbelt.judo.script</groupId>
             <artifactId>hu.blackbelt.judo.script.codegen.generator</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.1.0</version><!--$NO-MVN-MAN-VER$-->
         </dependency>
     </dependencies>
 </project>
