--- a/judo-runtime-core-dao-core/pom.xml
+++ b/judo-runtime-core-dao-core/pom.xml
@@ -19,7 +19,7 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Export-Package>hu.blackbelt.judo.services.dao.core.*;version:=${project.version}</Export-Package>
+                        <Export-Package>hu.blackbelt.judo.runtime.core.dao.core.*;version=${project.version}</Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
