--- a/judo-runtime-core-dao-rdbms-hsqldb/pom.xml
+++ b/judo-runtime-core-dao-rdbms-hsqldb/pom.xml
@@ -20,7 +20,7 @@
                 <configuration>
                     <instructions>
                         <Export-Package>
-                            hu.blackbelt.judo.runtime.core.dao.rdbms.hsqldb.*;version:=${project.version}
+                            hu.blackbelt.judo.runtime.core.dao.rdbms.hsqldb.*;version=${project.version}
                         </Export-Package>
                         <Import-Package>
                             ${osgi-default-import},
