--- a/judo-runtime-core-security/pom.xml
+++ b/judo-runtime-core-security/pom.xml
@@ -19,7 +19,7 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Export-Package>hu.blackbelt.judo.services.security.*;version:=${project.version}</Export-Package>
+                        <Export-Package>hu.blackbelt.judo.runtime.core.security.*;version=${project.version}</Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
