--- a/judo-runtime-core-transaction/pom.xml
+++ b/judo-runtime-core-transaction/pom.xml
@@ -19,7 +19,7 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Export-Package>hu.blackbelt.judo.services.transaction;version:=${project.version}</Export-Package>
+                        <Export-Package>hu.blackbelt.judo.runtime.core.transaction;version=${project.version}</Export-Package>
                         <Import-Package>
                             ${osgi-default-import},
                             ${osgi-transaction-import},
