Fixtures using guice, log4j replaced with logback

--- a/judo-runtime-core-bootstrap/pom.xml
+++ b/judo-runtime-core-bootstrap/pom.xml
@@ -74,13 +74,22 @@
             <artifactId>guice</artifactId>
         </dependency>
 
-        <!--
         <dependency>
             <groupId>net.jmob</groupId>
             <artifactId>guice.conf</artifactId>
             <version>v1.5.0</version>
         </dependency>
-        -->
+		<!-- Optional packages for guice configurator -->
+	    <dependency>
+	        <groupId>org.hibernate.validator</groupId>
+	        <artifactId>hibernate-validator-cdi</artifactId>
+	        <version>6.2.0.Final</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.glassfish</groupId>
+	        <artifactId>javax.el</artifactId>
+	        <version>3.0.0</version>
+	    </dependency>
 
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -104,11 +113,34 @@
             <artifactId>hu.blackbelt.judo.meta.script.model</artifactId>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>hu.blackbelt.osgi.liquibase</groupId>
             <artifactId>osgi-liquibase</artifactId>
             <version>${osgi-liquibase-version}</version>
         </dependency>
+        -->
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.9.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.17.1</version>
+			<scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.17.1</version>
+			<scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 </project>
