--- a/judo-runtime-core-dispatcher/pom.xml
+++ b/judo-runtime-core-dispatcher/pom.xml
@@ -147,5 +147,14 @@
             <artifactId>mapper-impl</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.6.1</version>
+
+        </dependency>
+
     </dependencies>
 </project>
