--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 
         <judo-meta-script-version>1.0.1.20220405_163241_c9ac58dd_develop</judo-meta-script-version>
         <judo-meta-asm-version>1.1.0.20220405_162156_c69f1a74_develop</judo-meta-asm-version>
-        <judo-meta-expression-version>1.0.1.20220405_162647_f55885a1_develop</judo-meta-expression-version>
+        <judo-meta-expression-version>1.0.1.20220516_150424_eb20ad0c_feature_JNG_3763_SupressModelNotFound</judo-meta-expression-version>
         <judo-meta-measure-version>1.0.0.20220405_162220_28539f03_develop</judo-meta-measure-version>
         <judo-meta-liquibase-version>1.0.0.20220405_162206_0ac0daa1_develop</judo-meta-liquibase-version>
         <judo-meta-openapi-version>1.0.0.20220405_162229_f202387c_develop</judo-meta-openapi-version>
@@ -97,7 +97,7 @@
         <judo-meta-query-version>1.0.0.20220405_162251_04a7dce4_develop</judo-meta-query-version>
         <judo-tatami-version>1.1.0.20220405_164003_ca74107c_develop</judo-tatami-version>
         <mapper-version>1.0.3.20220301_153541_5a46e1fe_develop</mapper-version>
-        <osgi-liquibase-version>1.2.1.20220223_094728_dbedc9cc_develop</osgi-liquibase-version>
+<!--        <osgi-liquibase-version>1.2.1.20220223_094728_dbedc9cc_develop</osgi-liquibase-version> -->
 
         <pax-exam-version>4.13.4</pax-exam-version>
         <pax-cdi-version>1.1.3</pax-cdi-version>
@@ -325,12 +325,14 @@
             <version>${slf4j-version}</version>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-reload4j</artifactId>
             <version>${slf4j-version}</version>
             <scope>test</scope>
         </dependency>
+        -->
 
         <dependency>
             <groupId>hu.blackbelt.epsilon</groupId>
@@ -684,7 +686,7 @@
             </dependency>
             <dependency>
                 <groupId>hu.blackbelt.judo.runtime</groupId>
-                <artifactId>judo-runtime-core-bootstap</artifactId>
+			    <artifactId>judo-runtime-core-bootstrap</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
