Making load for model holder and starting to create liquibase loader

--- a/judo-runtime-core-bootstrap/pom.xml
+++ b/judo-runtime-core-bootstrap/pom.xml
@@ -56,6 +56,11 @@
 
         <dependency>
             <groupId>hu.blackbelt.judo.runtime</groupId>
+            <artifactId>judo-runtime-core-dao-rdbms-liquibase</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.blackbelt.judo.runtime</groupId>
             <artifactId>judo-runtime-core-dispatcher</artifactId>
         </dependency>
 
@@ -109,8 +114,18 @@
         </dependency>
 
         <dependency>
+            <groupId>hu.blackbelt.judo.tatami</groupId>
+            <artifactId>judo-tatami-asm2script</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>hu.blackbelt.judo.meta</groupId>
             <artifactId>hu.blackbelt.judo.meta.script.model</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.blackbelt.judo.meta</groupId>
+            <artifactId>hu.blackbelt.judo.meta.liquibase.model</artifactId>
         </dependency>
 
         <!--
@@ -120,27 +135,5 @@
             <version>${osgi-liquibase-version}</version>
         </dependency>
         -->
-
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-            <version>4.9.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>testcontainers</artifactId>
-            <version>1.17.1</version>
-			<scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>1.17.1</version>
-			<scope>test</scope>
-        </dependency>
-
-
     </dependencies>
 </project>
