--- a/judo-runtime-core-dao-rdbms-itest/pom.xml
+++ b/judo-runtime-core-dao-rdbms-itest/pom.xml
@@ -16,6 +16,14 @@
             <groupId>hu.blackbelt.judo.runtime</groupId>
 		    <artifactId>judo-runtime-core-bootstrap</artifactId>
         </dependency>
+        <dependency>
+            <groupId>hu.blackbelt.judo.runtime</groupId>
+            <artifactId>judo-runtime-core-bootstrap-postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>hu.blackbelt.judo.runtime</groupId>
+            <artifactId>judo-runtime-core-bootstrap-hsqldb</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>hu.blackbelt.judo.runtime</groupId>
@@ -242,6 +250,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.17.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.2</version>
@@ -259,11 +273,6 @@
             <version>5.8.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>1.17.1</version>
-        </dependency>
         <dependency>
             <groupId>hu.blackbelt.judo.script</groupId>
             <artifactId>hu.blackbelt.judo.script.codegen.generator</artifactId>
